# Cursor.Open

./: .env.example  .gitignore  AI_INTEGRATION_GUIDE.md  CURSOR_TOOLS_GUIDE.md  DEPLOY_NOW.sh  FINAL_REPORT.md  FINAL_VERCEL_CONVERSION_SUMMARY.md  README.md  UNIFIED_PLATFORM_GUIDE.md  VERCEL_CONVERSION_GUIDE.md  VERCEL_DEPLOYMENT_COMPLETE.md  agent-tools-system.md  ai-code-editor.md  ai-integration-llm.md  ai_assistant.bundle  assistant_memory.sqlite3  backend-api-system.md  cursor-agents-analysis.md  deploy-vercel.sh  file-management-system.md  index.html  next.config.js  package-lock.json  package-nextjs.json  package.json  project-summary.md  tailwind.config.js  technical-architecture.md  terminal-integration.md  testing-deployment.md  tsconfig.json  ui-ux-design.md  vercel.json
ai_assistant/: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  postman_collection.json  pyproject.toml  requirements-dev.txt  requirements.txt
ai_assistant/.github/workflows/: android.yml  ci.yml  codeql.yml
ai_assistant/android/: README.md  build.gradle.kts  settings.gradle.kts
ai_assistant/android/app/: build.gradle.kts
ai_assistant/helm/: Chart.yaml  values.yaml
ai_assistant/helm/templates/: deployment.yaml  service.yaml
ai_assistant/kubernetes/: deployment.yaml
ai_assistant/src/assistant/: __init__.py  auth.py  backup_cli.py  config.py  engine.py  logging_utils.py  memory.py  middleware.py  openapi_export.py  server.py  (+1 more)
ai_assistant/tests/: test_api.py  test_ws_sse.py
(+218 files in other folders)
