[project]
name = "open-assistant-safe"
version = "0.1.0"
description = "Safe open-source assistant framework"
requires-python = ">=3.10"
readme = "README.md"
authors = [{name = "Open Assistant"}]
license = {file = "LICENSE"}

[project.scripts]
assistant = "assistant.cli:main"

[tool.black]
line-length = 100
exclude = "(venv|.venv|build|dist|.git)"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP"]
ignore = []
exclude = [".venv", "venv", "build", "dist", ".git"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
warn_unused_configs = true

[tool.isort]
profile = "black"
line_length = 100